Login and registration forms added. Form validation need further improvement. Firebase registration and login added

--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>MiniSocial</title>
+  <title>Spend Monitor</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans+Condensed:100,300,400,500,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
+  
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ"
+    crossorigin="anonymous">
+  
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
+<!-- Firebase -->
+<script src="https://www.gstatic.com/firebasejs/5.5.3/firebase.js"></script>
+
+
 </head>
 <body>
   <app-root></app-root>
