--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,8 @@
     crossorigin="anonymous">
   
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  
 
 
 </head>
